text align fixed

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -629,6 +629,10 @@ a {
   .text-left {
     text-align: left;
   }
+
+  .text-center {
+    text-align: center;
+  }
 }
 
 .mobile-spinner {
